--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Algorithm::ClusterPoints.
 
+0.06  Jul 7, 2008
+        - add support for hypercylindrical distances
+
+0.04  Jul 7, 2008
+        - first version released to CPAN
+
 0.01  Wed Jul  2 12:06:45 2008
 	- original version; created by h2xs 1.23 with options
 		-AXn Algorithm::ClusterPoints
