Import of SALVA/Algorithm-ClusterPoints-0.07 from CPAN.
gitpan-cpan-distribution: Algorithm-ClusterPoints
gitpan-cpan-version:      0.07
gitpan-cpan-path:         SALVA/Algorithm-ClusterPoints-0.07.tar.gz
gitpan-cpan-author:       SALVA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Algorithm::ClusterPoints.
 
+0.07  Jul 8, 2008
+        - bug corrected on scales method
+        - better error messages for scales and add_point
+
 0.06  Jul 7, 2008
         - add support for hypercylindrical distances
 
