Import of SALVA/Algorithm-ClusterPoints-0.08 from CPAN.
gitpan-cpan-distribution: Algorithm-ClusterPoints
gitpan-cpan-version:      0.08
gitpan-cpan-path:         SALVA/Algorithm-ClusterPoints-0.08.tar.gz
gitpan-cpan-author:       SALVA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Algorithm::ClusterPoints.
 
+0.08  Jul 10, 2008
+        - bug in hypercylinder calculation corrected.
+
 0.07  Jul 8, 2008
         - bug corrected on scales method
         - better error messages for scales and add_point
